<resources>
    <string name="app_name">Debtabase</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="debt">debt</string>
    <string name="welcome_to_debtabase_app_your_no_1_helper_to_manage_your_business_debt_management">Welcome to Debtabase App! Your no. 1 helper to manage your business debt management.</string>
    <string name="debtabase">DEBTABASE</string>
    <string name="register_customer">REGISTER CUSTOMER</string>
    <string name="customer_database">CUSTOMER DATABASE</string>
    <string name="textview">TextView</string>
    <string name="customer_registration">CUSTOMER REGISTRATION</string>
    <string name="customer_database1">CUSTOMER DATABASE</string>
    <string name="debtabase1">DEBTABASE</string>
    <string name="your_no_1_debt_monitoring_mobile_application">Your no. 1 debt monitoring mobile application</string>
    <string name="welcome_to_debtabase">WELCOME TO DEBTABASE!</string>
    <string name="img">img</string>
    <string name="f">f</string>
    <string name="img2">img2</string>
    <string name="regimg">regimg</string>
    <string name="customer_registration1">Customer Registration</string>
    <string name="cancel">CANCEL</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="add">+</string>
    <string name="sub">-</string>
    <string name="save">SAVE</string>
    <string name="save_products">SAVE PRODUCTS</string>
    <string name="price">Price</string>
    <string name="products_goods_purchased">Products/Goods Purchased</string>
    <string name="due_date">Due Date</string>
    <string name="due_balance">Due Balance</string>
    <string name="first_name">First Name</string>
    <string name="product_name">Product Name</string>
    <string name="last_name">Last Name</string>
    <string name="enter_first_name">Enter first name</string>
    <string name="enter_surname">Enter surname</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="product_information">Product Information</string>
    <string name="mmddyyyy">MMDDYYYY</string>
    <string name="enter_product_price">Enter product price</string>
    <string name="enter_product_name">Enter product name</string>
    <string name="prodimg">prodimg</string>
    <string name="purchase">Purchase</string>
    <string name="send_sms">Send SMS</string>
    <string name="customer_debt">Customer Debt</string>
    <string name="registration_button">Customer Registration</string>
    <string name="debtt">DEBTABASE</string>
    <string name="about">About</string>
    <string name="debtabase_is_a_mobile_application_that_helps_business_owners_monitor_their_customer_s_debt">Debtabase is a mobile application that helps business owners monitor their customer\'s debt</string>
    <string name="with_debtabase_monitoring_of_debts_is_now_easy_no_need_to_use_pen_and_paper_to_list_the_debts_just_use_debtabase_and_you_will_be_at_ease">With debtabase, monitoring of debts is now easy. No need to use pen and paper to list the debts, just use debtabase and you will be at ease.</string>
    <string name="todo">TODO</string>
    <string name="name1">Name</string>
    <string name="customer_name">Customer Name</string>
    <string name="smsimg">smsimg</string>
    <string name="send_sms_notification">Send SMS Notification</string>
    <string name="todoe">TODO</string>
    <string name="todoo">TODO</string>
    <string name="todooo">TODO</string>
    <string name="imgprod">imgProd</string>
    <string name="imgpeso">imgPeso</string>
    <string name="imgdate">imgDate</string>
    <string name="home">Home</string>
    <string name="imgname">imgName</string>
    <string name="imgphone">imgPhone</string>
    <string name="todos">TODO</string>
    <string name="todor">TODO</string>
    <string name="todoq">TODO</string>
    <string name="send">Send</string>
    <string name="imgsms">imgSMS</string>
    <string name="juan_dela_cruz">Juan Dela Cruz</string>
    <string name="debt_500">Debt: 500</string>
    <string name="due_january_1_2023">Due: January 1, 2023</string>
    <string name="buttonuser">buttonUser</string>
    <string name="go_to_home">Go to home</string>
    <string name="rtodoo">TODO</string>
    <string name="todoee">TODO</string>
    <string name="todov">TODO</string>
    <string name="todoqq">TODO</string>
    <string name="todoa">TODO</string>
    <string name="todovc">TODO</string>
    <string name="todol">TODO</string>
    <string name="register">Register</string>
    <string name="registration">Registration</string>
    <string name="customer">Customer</string>
</resources>