<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.debtabase.RegisterFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/registerConstraint"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/txtCustReg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="60dp"
            android:fontFamily="@font/bebas_neue"
            android:text="@string/customer_registration1"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="34sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imgreg2"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imgreg2"
            android:layout_width="51dp"
            android:layout_height="46dp"
            android:layout_marginStart="42dp"
            android:layout_marginTop="98dp"
            android:contentDescription="@string/regimg"
            android:src="@drawable/reg"
            app:layout_constraintEnd_toStartOf="@+id/txtCustReg"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="336dp"
            android:fontFamily="@font/bebas_neue"
            android:text="@string/name"
            android:textColor="#000000"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgreg2" />

        <TextView
            android:id="@+id/txtPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="277dp"
            android:fontFamily="@font/bebas_neue"
            android:text="@string/phone_number"
            android:textColor="#000000"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtLN" />

        <EditText
            android:id="@+id/txtFN"
            android:layout_width="250dp"
            android:layout_height="48dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="86dp"
            android:ems="10"
            android:fontFamily="@font/raleway"
            android:hint="@string/enter_first_name"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView4"
            app:layout_constraintTop_toBottomOf="@+id/txtName" />


        <EditText
            android:id="@+id/txtLN"
            android:layout_width="250dp"
            android:layout_height="48dp"
            android:layout_marginStart="81dp"
            android:layout_marginEnd="80dp"
            android:ems="10"
            android:fontFamily="@font/raleway"
            android:hint="@string/enter_surname"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtFN" />

        <EditText
            android:id="@+id/txtPhoneNum"
            android:layout_width="250dp"
            android:layout_height="48dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="75dp"
            android:ems="10"
            android:fontFamily="@font/raleway"
            android:hint="@string/enter_phone_number"
            android:importantForAutofill="no"
            android:inputType="phone"
            android:minHeight="48dp"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView8"
            app:layout_constraintTop_toBottomOf="@+id/txtPhone" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="70dp"
            android:background="@drawable/btn_orange_bg"
            android:fontFamily="@font/bebas_neue"
            android:text="@string/save"
            android:textColor="#FDF8F8"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/btnCancelReg"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtPhoneNum"
            tools:ignore="TextContrastCheck" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnCancelReg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="41dp"
            android:layout_marginTop="70dp"
            android:layout_marginEnd="90dp"
            android:background="@drawable/btn_orange_bg"
            android:fontFamily="@font/bebas_neue"
            android:text="@string/cancel"
            android:textColor="#FDF8F8"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btnSave"
            app:layout_constraintTop_toBottomOf="@+id/txtPhoneNum"
            tools:ignore="TextContrastCheck" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="31dp"
            android:layout_height="26dp"
            android:layout_marginStart="45dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/imgname"
            android:src="@drawable/name1"
            app:layout_constraintEnd_toStartOf="@+id/txtFN"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtName" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="31dp"
            android:layout_height="26dp"
            android:layout_marginStart="45dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/imgphone"
            android:src="@drawable/phone"
            app:layout_constraintEnd_toStartOf="@+id/txtPhoneNum"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtPhone" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>