<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.debtabase.fragment.WelcomeFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/welcomeConstraint"
        android:background="@drawable/bg_gradient"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btnHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_orange_bg"
            android:fontFamily="@font/bebas_neue"
            android:text="@string/go_to_home"
            android:textColor="#FDF8F8"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView11"
            tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />


        <Button
            android:id="@+id/btnCustomerReg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/btn_orange_bg"
            android:fontFamily="@font/bebas_neue"
            android:text="@string/customer_registration"
            android:textColor="#FDF8F8"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnHome"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="245dp"
            android:layout_height="115dp"
            android:layout_marginStart="90dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="77dp"
            android:fontFamily="@font/bebas_neue"
            android:text="@string/welcome_to_debtabase"
            android:textAlignment="center"
            android:textColor="#0C0C0C"
            android:textSize="48sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="356dp"
            android:layout_height="75dp"
            android:layout_marginStart="39dp"
            android:layout_marginTop="23dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/raleway"
            android:text="@string/your_no_1_debt_monitoring_mobile_application"
            android:textAlignment="center"
            android:textColor="#131313"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            tools:ignore="TextContrastCheck" />

        <ImageView
            android:id="@+id/imageView11"
            android:layout_width="402dp"
            android:layout_height="384dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="9dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:src="@drawable/logs"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            android:contentDescription="@string/rtodoo" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>